# yt_experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  contributing.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yaml  run_tests.yaml  temporary_gh_only_draft_release.yaml  type_checking.yaml
examples/: tiled_grids.ipynb  tiled_grids_intro.ipynb  tiled_grids_light_cone.ipynb  tiled_grids_optimizing.ipynb  tiled_pyramid_napari_multiscale.py  tiled_zarr_grid.ipynb
yt_experiments/: __init__.py
yt_experiments/octree/: converter.pyx
yt_experiments/octree/tests/: test_converter.py
yt_experiments/rendering/: volume_rendering.html
yt_experiments/tests/: test_yt_experiments.py
yt_experiments/tiled_grid/: __init__.py  tiled_grid.py  tiled_grids.py
yt_experiments/tiled_grid/tests/: test_tiled_grid.py
